# tf-from-sql

./: .gitignore  README.md  pyproject.toml
tf_from_sql/: __main__.py  data.py  db.py  model.py
