[tool.poetry]
name = "tf-from-sql"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.10"
tf-nightly = "^2.9.0-alpha.20220131"
matplotlib = "^3.5.1"
numpy = "^1.22.1"
click = "^8.0.3"
SQLAlchemy = "^1.4.31"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
